--- a/StingRay/StingRay/StingRay.vcxproj
+++ b/StingRay/StingRay/StingRay.vcxproj
@@ -71,8 +71,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\SDL\SDL2\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\SDL\SDL2\include;C:\Users\arjoo\source\repos\StingRay\SDL2_ttf-2.20.2\x86_64-w64-mingw32\include\SDL2;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\SDL\SDL2\lib\x64;C:\Users\arjoo\source\repos\StingRay\SDL2_ttf-2.20.2\x86_64-w64-mingw32\lib;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LibraryPath>C:\SDL\SDL2\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\SDL\SDL2\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -124,26 +128,31 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Display.cpp" />
+    <ClCompile Include="PBRMat.cpp" />
     <ClCompile Include="Ray.cpp" />
     <ClCompile Include="StingRay.cpp" />
     <ClCompile Include="Tracer.cpp" />
-    <ClCompile Include="Vertex.cpp" />
+    <ClCompile Include="Vector.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Display.h" />
+    <ClInclude Include="PBRMat.h" />
+    <ClInclude Include="Sphere.h" />
     <ClInclude Include="Ray.h" />
     <ClInclude Include="Tracer.h" />
-    <ClInclude Include="Vertex.h" />
+    <ClInclude Include="Vector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
